testcases/error/sv_with_implicit_reset.veryl
module sv_with_implicit_reset {
    let rst: reset = 1;

    inst u: $sv::Module (
        rst  ,
    );
}
